--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<body>
 		<p>This is my project website for Vanjo's Merienda</p>
-		<li><a href="index.php"></a></li>
+		<li><a href="index.php">Home</a></li>
 	</body>
 </head>
 </html>
